--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ date_format: "%-d %B, %Y"
 
 # Build settings
 markdown: kramdown
-permalink: /:year/:month/:day/:title/
+permalink: /write/:year/:month/:day/:title/
 theme: minima
 # Theme options
 enable_mathjax: true
